# api/v1/models/endpoint_change_request.go
@@ -1,91 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// Copyright 2022 Authors of spidernet-io
-// SPDX-License-Identifier: Apache-2.0
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// EndpointChangeRequest Structure which contains the mutable elements of an Endpoint.
-//
-// swagger:model EndpointChangeRequest
-type EndpointChangeRequest struct {
-
-	// enabled
-	// Required: true
-	Enabled *bool `json:"enabled"`
-
-	// Local endpoint ID
-	// Required: true
-	ID *int64 `json:"id"`
-}
-
-// Validate validates this endpoint change request
-func (m *EndpointChangeRequest) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateEnabled(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *EndpointChangeRequest) validateEnabled(formats strfmt.Registry) error {
-
-	if err := validate.Required("enabled", "body", m.Enabled); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *EndpointChangeRequest) validateID(formats strfmt.Registry) error {
-
-	if err := validate.Required("id", "body", m.ID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this endpoint change request based on context it is used
-func (m *EndpointChangeRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *EndpointChangeRequest) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *EndpointChangeRequest) UnmarshalBinary(b []byte) error {
-	var res EndpointChangeRequest
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
