# api/v1/server/restapi/controller/delete_endpoint_id_parameters.go
@@ -1,75 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// Copyright 2022 Authors of spidernet-io
-// SPDX-License-Identifier: Apache-2.0
-
-package controller
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/strfmt"
-)
-
-// NewDeleteEndpointIDParams creates a new DeleteEndpointIDParams object
-//
-// There are no default values defined in the spec.
-func NewDeleteEndpointIDParams() DeleteEndpointIDParams {
-
-	return DeleteEndpointIDParams{}
-}
-
-// DeleteEndpointIDParams contains all the bound params for the delete endpoint ID operation
-// typically these are obtained from a http.Request
-//
-// swagger:parameters DeleteEndpointID
-type DeleteEndpointIDParams struct {
-
-	// HTTP Request Object
-	HTTPRequest *http.Request `json:"-"`
-
-	/*String describing an endpoint
-
-	  Required: true
-	  In: path
-	*/
-	ID string
-}
-
-// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
-// for simple values it will use straight method calls.
-//
-// To ensure default values, the struct must have been initialized with NewDeleteEndpointIDParams() beforehand.
-func (o *DeleteEndpointIDParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
-	var res []error
-
-	o.HTTPRequest = r
-
-	rID, rhkID, _ := route.Params.GetOK("id")
-	if err := o.bindID(rID, rhkID, route.Formats); err != nil {
-		res = append(res, err)
-	}
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// bindID binds and validates parameter ID from path.
-func (o *DeleteEndpointIDParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
-	var raw string
-	if len(rawData) > 0 {
-		raw = rawData[len(rawData)-1]
-	}
-
-	// Required: true
-	// Parameter is provided by construction from the route
-	o.ID = raw
-
-	return nil
-}
